# single-sig-magical

./: .gitignore  Cargo.toml  README.md
src/: main.rs
